Add css and js ignore paths to .gitignore

--- a/dvJudge/.gitignore
+++ b/dvJudge/.gitignore
@@ -31,3 +31,9 @@
 ehthumbs.db
 Thumbs.db
 
+# CSS #
+##############
+dvJudge/static/css/*
+dvJudge/static/fonts/*
+dvJudge/static/jquery-2.1.4.js
+dvJudge/static/js/*
