Profile is in progress

--- a/dvjudge/settings.cfg
+++ b/dvjudge/settings.cfg
@@ -4,3 +4,5 @@ DEBUG = True
 SECRET_KEY = 'development key'
 USERNAME = 'admin'
 PASSWORD = 'default'
+UPLOAD_FOLDER = '/path/to/the/uploads'
+ALLOWED_EXTENSIONS = set(['jpg', 'jpeg'])
