--- a/dvjudge/settings.cfg
+++ b/dvjudge/settings.cfg
@@ -4,5 +4,5 @@ DEBUG = True
 SECRET_KEY = 'development key'
 USERNAME = 'admin'
 PASSWORD = 'default'
-UPLOAD_FOLDER = '/path/to/the/uploads'
+UPLOAD_FOLDER = '/tmp/profilepics'
 ALLOWED_EXTENSIONS = set(['jpg', 'jpeg'])
