changed how profile pictures are stored
Profile pictures are now stored in as a file name in the database and the file in the
static folder
Added a zip file of the profile pics and an extraction script

--- a/dvjudge/.gitignore
+++ b/dvjudge/.gitignore
@@ -39,3 +39,7 @@ dvJudge/static/jquery-2.1.4.js
 dvJudge/static/js/*
 dvjudge/static/*.jpg
 dvjudge/static/*.jpeg
+dvjudge/static/*.jpg
+dvjudge/static/*.png
+static/*.jpg
+static/*.png
